# blog.cordx.cx

./: .gitignore  .s3gitignore  Cargo.toml  README.md  blog.cabal  config.yaml
.github/workflows/: deploy.yaml
app/: Image.hs  Main.hs
site/: license.md
site/css/: main.css
site/posts/: 2023-10-24-first-post.md  2023-10-30-haskell-docker-cache.md  2023-11-25-hakyll-ogp-gen.md  2023-12-05-ogp-update.md  2023-12-25-rust-tmux-zellij.md  2024-01-28-publish-polysite.md  2024-06-11-cloudflare-wasm-import.md  2024-09-19-intel-net-cont-problem.md  2024-11-27-bash-http-server.md  2024-12-02-obsidian-s3-lambda.md  2024-12-10-obsidian-polysite.md  2025-08-12-oss.en.md  2025-08-12-oss.ja.md  2025-12-02-rustowl-impl.md  2025-12-05-oss-owner.md  2025-12-09-ai-nvim.md
src/: CNAME  archive.md  index.html  index.md  license.md  main.rs  ogp.rs  tags.rs
src/css/: main.css
src/posts/: 2023-10-24-first-post.md  2023-11-17-slick-hakyll-migration.md  2023-11-25-hakyll-ogp-gen.md  2023-12-05-ogp-update.md  2023-12-25-rust-tmux-zellij.md
templates/: archive.html  base.html  common.html  footer.html  header.html  index.html  post-list.html  post.html  tag-list.html  tags.html
