[package]
name = "blog-cordx-cx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1"
polysite = "0.0.1"
imageproc = "0.23.0"
rusttype = "0.9.3"
anyhow = "1.0.79"
image = "0.24.8"
simple_logger = "4.3.3"
