[package]
name = "blog-cordx-cx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1"
polysite = "0.0.2"
imageproc = "0.23.0"
rusttype = "0.9.3"
anyhow = "1.0.79"
image = "0.24.8"
simple_logger = "4.3.3"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
log = "0.4.22"
vibrato = "0.5.1"
zstd = "0.13.2"
reqwest = "0.12.9"
tar = "0.4.43"
xz = "0.1.0"
serde_json = "1.0.133"
